# verilator-cmake

./: README.md
.github/workflows/: tests.yml
cmake/: verilator-config.cmake
tests/: CMakeLists.txt
tests/src/: top.cpp  top.sv
